syntax = "proto3";
package protocol;

// 登陆
message CLogin
{
    string phone    = 1;  // 手机
    string password = 2;  // 密码 (MD5)
}

message SLogin
{
    string userid   = 1 ;//用户id
    uint32 error    = 2 ;//错误码
}

// 注册
message CRegist
{
    string nickname = 1;//昵称
    string phone    = 2;//手机号
    string password = 3;//密码(md5)
}

message SRegist
{
    string userid = 1 ;//用户id
    uint32 error  = 2 ;//错误码
}

// 微信登录登陆
message CWxLogin
{
    string wxcode  = 1; //微信code
    string token   = 2; //token登录
}

message SWxLogin
{
    string userid  = 1 ;// 用户id
    string token   = 2 ;// 返回access_token
    uint32 error   = 3 ;// 错误码
}

message SLoginOut
{ 
    uint32 rtype = 1 ;//1别处登录,2停服
}  
